# Kilikawi-2026

./: .gitignore  CONTRIBUTING.md  MANUAL_CONTROL_GUIDE.md  README.md
Kilikawi/: FDK3533C-XC_Manual_EN_v2 (Repaired).docx  FDK3533C-XC_Manual_EN_v2.docx  FDK3533C-XC_Manual_EN_v3.docx  WINDCON_RS485_CAN_DATA_MAP.md  programmer_connector.jfif  programmer_connector_full.jfif
uart_simulator/: PROTOCOL.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  install_can_driver.ps1  launch_app.py  pyproject.toml  repair_com0com.ps1  replay_virtual_com.py  run_emulator.ps1  run_gui.ps1  run_virtual_lab.ps1  setup_free_virtual_ports.ps1  spec_protocol.md  start_all.ps1
uart_simulator/src/uart_simulator/: __init__.py  config.py
uart_simulator/src/uart_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uart_simulator/src/uart_simulator/emulator/: __init__.py  model.py  server.py
uart_simulator/src/uart_simulator/gui/: __init__.py  app.py  legacy_app.py
uart_simulator/src/uart_simulator/protocol/: __init__.py  ascii_modbus.py
uart_simulator/src/uart_simulator/tools/: __init__.py  canopen_map.py  controller_client.py  decode_can_log.py  decode_receive_log.py  encoding_reference.py  sniffer.py  virtual_lab.py  virtual_terminal.py  windcon_map.py
uart_simulator/tests/: RPM_INJECTION_TEST_WORKFLOW.md  conftest.py  test_canopen_decode.py  test_controller_client.py  test_encoding_reference.py  test_gui_helpers.py  test_model.py  test_protocol.py  test_rpm_profile_injection.py  test_server_parser.py  test_windcon_map.py
(+75 files in other folders)
